deploy/webhook.yml
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-mutate-registry
  labels:
    app: k8s-mutate-registry
spec:
  publishNotReadyAddresses: true
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: k8s-mutate-registry

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-mutate-registry
  labels:
    app: k8s-mutate-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-mutate-registry
  template:
    metadata:
      name: k8s-mutate-registry
      labels:
        app: k8s-mutate-registry
    spec:
      containers:
        - name: mutator
          image: vchrisr/k8smutateregistry:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: ssl
              mountPath: "/home/ssl"
              readOnly: true
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 250m
              memory: 64Mi
      volumes:
      - name: ssl
        secret:
          secretName: webhook-tls

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: k8s-mutate-registry
  labels:
    app: k8s-mutate-registry
webhooks:
  - name: k8s-mutate-registry.default.svc.cluster.local
    clientConfig:
      caBundle: 
      service:
        name: k8s-mutate-registry
        namespace: default
        path: "/mutate"
        port: 443
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    sideEffects: None
    timeoutSeconds: 5
    reinvocationPolicy: Never
    failurePolicy: Ignore
    namespaceSelector:
        matchLabels:
          k8s-mutate-registry: enabled
